<resources>
    <string name="app_name">Android-SPD-111</string>

    <!-- Main activyty -->
    <string name="main_title">Основи Android Studio</string>
    <string name="main_btn_calc">Калькулятор</string>
    <string name="main_btn_game">Свайпи. Гра</string>
    <string name="main_btn_chat">Мережа. Чат</string>
    <string name="main_btn_anim">Анімація</string>

    <!-- region Calc activity -->
    <string name="calc_text_title">Calculator</string>
    <string name="calc_btn_precent">%</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_backspace">\u232B</string>

    <string name="calc_btn_1">1</string>
    <string name="calc_btn_2">2</string>
    <string name="calc_btn_3">3</string>
    <string name="calc_btn_4">4</string>
    <string name="calc_btn_5">5</string>
    <string name="calc_btn_6">6</string>
    <string name="calc_btn_7">7</string>
    <string name="calc_btn_8">8</string>
    <string name="calc_btn_9">9</string>
    <string name="calc_btn_0">0</string>
    <string name="calc_btn_plus">+</string>
    <string name="calc_btn_minus">-</string>
    <string name="calc_btn_division">÷</string>
    <string name="calc_btn_result">=</string>
    <string name="calc_btn_sqrt">\u221Ax</string>
    <string name="calc_btn_power">x\u00B2</string>
    <string name="calc_btn_inverse">\u00B9/\u2093</string>

    <string name="calc_btn_multiplication">×</string>
    <string name="calc_btn_separation">,</string>
    <string name="calc_btn_plus_minus">\u00B1</string>
    <string name="calc_limit_exceeded">Limit exceeded</string>
    <string name="calc_zero_division">Division by zero</string>
    <!--endregion -->

    <!-- region Game activity -->
    <string name="game_btn_game">Основи Android Studio</string>
    <!-- endregion -->


    <!-- region Chat activity -->
    <string name="chat_scroller_description">Chat Messages</string>
    <!-- endregion -->

    <!-- region Anim activity -->
    <string name="anim_title">Анімація</string>
    <string name="anim_opacity_title">Прозорість</string>
    <string name="anim_size_title">Маштаб</string>
    <string name="anim_arc_title">Обертання</string>
    <string name="anim_move_title">Переміщення</string>
    <string name="anim_combo_title">Комбінація</string>

    <!-- endregion -->
</resources>