<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcActivity"
    android:orientation="vertical"
    android:background="@drawable/calc_bgn_gradient"
    android:padding="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_text_title"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginHorizontal="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:text="25 x 3 =" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:layout_gravity="right"
        android:text="75" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/calc_btn_precent"
                android:text="@string/calc_btn_precent"
                style="@style/calc_func_button"
                />
            <Button
                android:id="@+id/calc_btn_ce"
                android:text="@string/calc_btn_ce"
                style="@style/calc_func_button"
                />
            <Button
                android:id="@+id/calc_btn_c"
                android:text="@string/calc_btn_c"
                style="@style/calc_func_button"
                />
            <Button
                android:id="@+id/calc_btn_backspase"
                android:text="@string/calc_btn_backspace"
                style="@style/calc_func_button"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <Button
                android:id="@+id/calc_btn_1"
                android:text="@string/calc_btn_1"
                style="@style/calc_func_button"
                />
            <Button
                android:id="@+id/calc_btn_2"
                android:text="@string/calc_btn_2"
                style="@style/calc_func_button"
                />
            <Button
                android:id="@+id/calc_btn_3"
                android:text="@string/calc_btn_3"
                style="@style/calc_func_button"
                />
            <Button
                android:id="@+id/calc_btn_add"
                android:text="@string/calc_btn_plus"
                style="@style/calc_func_button"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <Button
                android:id="@+id/calc_btn_4"
                android:text="@string/calc_btn_4"
                style="@style/calc_func_button"
                />
            <Button
                android:id="@+id/calc_btn_5"
                android:text="@string/calc_btn_5"
                style="@style/calc_func_button"
                />
            <Button
                android:id="@+id/calc_btn_6"
                android:text="@string/calc_btn_6"
                style="@style/calc_func_button"
                />
            <Button
                android:id="@+id/calc_btn_minus"
                android:text="@string/calc_btn_minus"
                style="@style/calc_func_button"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <Button
                android:id="@+id/calc_btn_7"
                android:text="@string/calc_btn_7"
                style="@style/calc_func_button"
                />
            <Button
                android:id="@+id/calc_btn_8"
                android:text="@string/calc_btn_8"
                style="@style/calc_func_button"
                />
            <Button
                android:id="@+id/calc_btn_9"
                android:text="@string/calc_btn_9"
                style="@style/calc_func_button"
                />
            <Button
                android:id="@+id/calc_btn_multiplication"
                android:text="@string/calc_btn_multiplication"
                style="@style/calc_func_button"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <Button
                android:id="@+id/calc_btn_plus_minus"
                android:text="@string/calc_btn_plus_minus"
                style="@style/calc_func_button"
                />
            <Button
                android:id="@+id/calc_btn_0"
                android:text="@string/calc_btn_0"
                style="@style/calc_func_button"
                />
            <Button
                android:id="@+id/calc_btn_separation"
                android:text="@string/calc_btn_separation"
                style="@style/calc_func_button"
                />
            <Button
                android:id="@+id/calc_btn_division"
                android:text="@string/calc_btn_division"
                style="@style/calc_func_button"
                />
        </TableRow>
    </TableLayout>

</LinearLayout>